--- a/slot/index.html
+++ b/slot/index.html
@@ -40,8 +40,8 @@
 	<div id="play" class="button button-default">Play</div>	  
       </div>
     </div>
+    <input id="debug" type="button" value="Toggle Reels"/>
   </div>
-
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js" ></script>
   <script type="text/javascript" src="js/slot.js"></script>
   <script type="text/javascript">$(function() { SlotGame(); });</script>
