Tabindex 0 to make div keyboard accessible

--- a/slot5/index.html
+++ b/slot5/index.html
@@ -47,7 +47,7 @@
 
 
         <div id="buttons">
-            <div role="button" id="play" class="button button-default">Play</div>
+            <div role="button" tabindex=“0” id="play" class="button button-default">Play</div>
         </div>
 
         <div id="audio_debug">Audio not supported</div>
